objects/ABB_Probability_Field_Value_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ABB_Sales_Stage__c</fullName>
        <label>ABB Sales Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Preference__c</fullName>
        <label>Customer Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Pursuit_Progress__c</fullName>
        <label>Sales Pursuit Progress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ABB Probability Field Value Mapping</label>
</CustomObject>